Rework resource loading
  - Read directly to `String` to avoid unnecessary copying.
  - Specify UTF-8 rather than using the default charset.
  - Strip HTML comments to avoid parsing errors.